/auth styling done ig

--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -624,6 +624,14 @@ video {
   margin-top: 0.5rem;
 }
 
+.mt-\[\] {
+  margin-top: ;
+}
+
+.mt-\[10vh\] {
+  margin-top: 10vh;
+}
+
 .block {
   display: block;
 }
@@ -843,6 +851,10 @@ video {
   padding-left: 0.5rem;
 }
 
+.pt-\[10vh\] {
+  padding-top: 10vh;
+}
+
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
@@ -960,6 +972,10 @@ video {
   .sm\:w-96 {
     width: 24rem;
   }
+
+  .sm\:pt-\[10vh\] {
+    padding-top: 10vh;
+  }
 }
 
 @media (min-width: 768px) {
@@ -1011,6 +1027,14 @@ video {
     flex-direction: row;
   }
 
+  .md\:items-center {
+    align-items: center;
+  }
+
+  .md\:justify-center {
+    justify-content: center;
+  }
+
   .md\:gap-2 {
     gap: 0.5rem;
   }
@@ -1026,6 +1050,10 @@ video {
   .md\:py-2 {
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
+  }
+
+  .md\:pt-8 {
+    padding-top: 2rem;
   }
 
   .md\:duration-100 {
